[gd_scene load_steps=4 format=2]

[ext_resource path="res://Effects/FadeLayer.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="FadeLayer" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="TextureRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeAnimator" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )

[node name="FadeInDelay" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="FadeAnimator" to="." method="_on_FadeAnimator_animation_finished"]
[connection signal="timeout" from="FadeInDelay" to="." method="_on_FadeInDelay_timeout"]
